--- a/src/app/grid-list-component/grid-list-item-component/grid-list-item-component.component.html
+++ b/src/app/grid-list-component/grid-list-item-component/grid-list-item-component.component.html
@@ -1,4 +1,4 @@
-<mat-card (click)="openGist()" class="ripplelink" md-ink-ripple >
+<mat-card (click)="openGist()" class="ripplelink" matRipple >
 
   <div class="d-flex justify-content-start">
     <div>
