--- a/src/app/grid-list-component/grid-list-item-component/grid-list-item-component.component.html
+++ b/src/app/grid-list-component/grid-list-item-component/grid-list-item-component.component.html
@@ -1,6 +1,6 @@
 <mat-card (click)="openGist()" class="ripplelink" matRipple >
 
-  <div class="d-flex justify-content-start">
+  <div class="d-flex justify-content-start mat-typography">
     <div>
       <div class="cardImageDiv">
         <img mat-card-image class="cardImage" src={{gistItem.owner.avatar_url}} alt={{gistItem.owner.login}}>
